[project]
name = "mystoq"
version = "0.1.0"
description = "Official Mystoq Python SDK"
authors = [{ name = "Hartem Yaakoub", email = "yaakoub.hartem.mhsi@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["httpx>=0.27"]

[project.urls]
Homepage = "https://mystoq.com"
Repository = "https://github.com/hartemyaakoub/mystoq-python-sdk"
